Revision history for Test-Run-CmdLine

    * Factored out some methods in lib/Test/Run/CmdLine/Iface.pm to
    make debugging easier.
        - _real_prepare_driver_class
        - _prepare_driver_class
        - _calc_driver

0.0108     Mon Aug 18 20:03:47 IDT 2008
    * Changed all the initializers to _init() instead of _initialize().
        - In compatibility with Test-Run-0.0117
    * Now depends on Test-Run-0.0117

0.0107     Tue Feb 19 21:18:15 IST 2008
    * Now testing the system return code of runprove in t/03-prove.t.
        - Fixed it in the module.
    * Added some examples for integrating Test::Run::CmdLine into Perl-based
    build-systems under examples/.

0.0106      Sat Jun 23 13:22:16 IDT 2007
    * Placed the runprove trapping functionality in 
    lib/Test/Run/CmdLine/Trap/Prove.pm for easy re-use by the
    plugins.
    * Added lib/Test/Run/CmdLine/Prove/App.pm as a standalone -M command
    line module implementing the "runprove" functionality. 
        - Also useful for testing - see below.
        - converted runprove to use it.
    * Added lib/Test/Run/CmdLine/Trap/ProveApp.pm for testing
    the ::Prove::App Module-App, so we won't rely on "runprove"
    being in the path.

0.0105      Mon Jun 11 14:52:44 IDT 2007
    * Now prove does not barf with weird errors when ran with no arguments.
    * Converted t/04-t-r-cl-iface.t to Test::Trap.
    * Refactored the get_backend_env_args() method of Test::Run::CmdLine.
    * Extracted a method.
    * Extended the environment variables handling in 
    Test::Run::CmdLine with types. 
    * Replaced "back_end" with "backend" in an identifier for better 
    consistency. 
    * Added the yamldata backend environment variable type, and 
    converted the "alternate interpreters" plugin to use it. 
    * Added the "varmap" type to Test::Run::CmdLine.
    * Converted to use Build.PL and Test::Run::Builder. 
    * Refactored the tests of t/03-prove.t into Test::Run::Trap::Obj. 