@@ -1,0 +1,12 @@
+package Test::Run::CmdLine::Plugin::ZedField;
+
+use strict;
+use warnings;
+
+sub private_backend_plugins
+{
+    return ["ZedField"];
+}
+
+1;
+
